GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  cp, install, mv, and touch no longer crash when setting file times
  on Solaris 10 Update 9 [Solaris PatchID 144488 and newer expose a
  latent bug introduced in coreutils 8.1, and possibly a second latent
  bug going at least as far back as coreutils 5.97]

  tail -F once again notices changes in a currently unavailable
  remote directory [bug introduced in coreutils-7.5]

** Changes in behavior

  cp --attributes-only now completely overrides --reflink.
  Previously a reflink was needlessly attempted.

  stat's %X, %Y, and %Z directives once again print only the integer
  part of seconds since the epoch.  This reverts a change from
  coreutils-8.6, that was deemed unnecessarily disruptive.  To obtain
  a full resolution time stamp for %X, use %.X; if you want (say) just
  3 fractional digits, use %.3X.  Likewise for %Y and %Z.

  stat's new %W format directive would print floating point seconds.
  However, with the above change to %X, %Y and %Z, we've made %W work
  the same way as the others.


* Noteworthy changes in release 8.6 (2010-10-15) [stable]

** Bug fixes

  du no longer multiply counts a file that is a directory or whose
  link count is 1, even if the file is reached multiple times by
  following symlinks or via multiple arguments.

  du -H and -L now consistently count pointed-to files instead of
  symbolic links, and correctly diagnose dangling symlinks.

  du --ignore=D now ignores directory D even when that directory is
  found to be part of a directory cycle.  Before, du would issue a
  "NOTIFY YOUR SYSTEM MANAGER" diagnostic and fail.

  split now diagnoses read errors rather than silently exiting.
  [bug introduced in coreutils-4.5.8]

  tac would perform a double-free when given an input line longer than 16KiB.
  [bug introduced in coreutils-8.3]
